--- a/v2/frontend/experiments/images.html
+++ b/v2/frontend/experiments/images.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>__TITLE__</title>
-		<link rel="stylesheet/less" href="resources/css/style.less">
+		<link rel="stylesheet/less" href="../resources/css/style.less">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -11,7 +11,7 @@
         <script type="text/javascript">
             async function getLists() {
                 try {
-                    const data = await fetch('../backend/lists.php');
+                    const data = await fetch('../../api/lists.php');
 
                     return await data.json();
                 } catch (error) {
