--- a/v2/frontend/experiments/date-added-graph.html
+++ b/v2/frontend/experiments/date-added-graph.html
@@ -31,6 +31,7 @@
             .line {
                 fill: none;
                 stroke-width: 4px;
+                stroke-linecap: round;
             }
 
             .overlay {
