--- a/v2/frontend/experiments/date-added-graph.html
+++ b/v2/frontend/experiments/date-added-graph.html
@@ -4,17 +4,10 @@
         <meta charset="utf-8">
 		<title>Date Added Visualization</title>
         <script src="https://d3js.org/d3.v4.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>     
-            body {
-                margin: 50px;
-            }   
-
-            h1 {
-                font: bold 28px 'Helvetica Neue';
-                margin: 0 0 30px 0;
-            }
-            
+		<link rel="stylesheet/less" href="experiments-style.less">
+		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
             .axis path,
             .axis line {
                 fill: none;
