--- a/v2/frontend/experiments/images.html
+++ b/v2/frontend/experiments/images.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>__TITLE__</title>
-		<link rel="stylesheet/less" href="../resources/css/style.less">
+        <meta charset="utf-8">
+		<title>Images</title>
+		<link rel="stylesheet/less" href="experiments-style.less">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
         <pre id="debug"></pre>
