--- a/v2/frontend/experiments/category-stats.html
+++ b/v2/frontend/experiments/category-stats.html
@@ -62,6 +62,7 @@
                 margin-top: 50px;
                 color: rgba(0, 0, 0, 0.2);
                 font: 14px 'Helvetica Neue';
+                display: none;
             }
 
             #credit a {
@@ -92,7 +93,8 @@
             async function render() {
                 const   listData = await getListData(),
                         category_stats = document.querySelector("#category_stats"),
-                        title = document.querySelector("h1");
+                        title = document.querySelector("h1"),
+                        credit = document.querySelector("#credit");
 
                 window.document.title = `${listData.metadata.name} – ${window.document.title}`;
                 title.innerText = listData.metadata.name;
@@ -106,6 +108,8 @@
                 });
 
                 category_stats.innerHTML = category_stat_list_items;
+                
+                credit.style.display = 'block';
 
                 // document.getElementById('debug').innerHTML = JSON.stringify(listData, null, 2);
             }
