--- a/v2/frontend/experiments/date-added-graph.html
+++ b/v2/frontend/experiments/date-added-graph.html
@@ -31,155 +31,95 @@
                 fill: none;
                 pointer-events: all;
             }
-            /* 
-            .focus circle {
-                fill: #2D9AFF;
-            }
-
-            .hover-line {
-                stroke: rgba(0, 0, 0, 0.2);
-                stroke-width: 1px;
-            }
-
-            .tooltip {
-                font: 14px 'Helvetica Neue';
-                fill: rgba(0, 0, 0, 0.8);
-            } */
         </style>
 	</head>
 	<body>
         <h1></h1>
-        <svg width="640" height="480"></svg>
+        <h2>Number of places saved over time</h2>
+        <svg width="640" height="480" id="date-graph"></svg>
         <script>
-            const pathColors = [
-                "#FF522D",
-                "#7DFF2D",
-                "#572DFF",
-                "#FF852D",
-                "#2DD9FF",
-                "#A22DFF",
-                "#FFC42D",
-                "#2D9AFF",
-                "#E22DFF",
-                "#FFEA2D",
-                "#2D5BFF",
-                "#FF2DAB"
-            ];
+            renderDataAddedGraph("date-graph", window.location.hash.replace('#', ''));
+            
+            function renderDataAddedGraph(svg_id, foursquare_list_id) {
+                const pathColors = [
+                    "#FF522D",
+                    "#7DFF2D",
+                    "#572DFF",
+                    "#FF852D",
+                    "#2DD9FF",
+                    "#A22DFF",
+                    "#FFC42D",
+                    "#2D9AFF",
+                    "#E22DFF",
+                    "#FFEA2D",
+                    "#2D5BFF",
+                    "#FF2DAB"
+                ];
 
-            var svg = d3.select("svg"),
-                margin = {top: 10, right: 60, bottom: 60, left: 70},
-                width = +svg.attr("width") - margin.left - margin.right,
-                height = +svg.attr("height") - margin.top - margin.bottom;
+                var svg = d3.select(`svg#${svg_id}`),
+                    margin = {top: 10, right: 60, bottom: 60, left: 70},
+                    width = +svg.attr("width") - margin.left - margin.right,
+                    height = +svg.attr("height") - margin.top - margin.bottom;
 
-            var parseTime = d3.timeParse("%Y-%m")
-                bisectDate = d3.bisector(function(d) { return d.year; }).left;
+                var parseTime = d3.timeParse("%Y-%m")
+                    bisectDate = d3.bisector(function(d) { return d.year; }).left;
 
-            var x = d3.scaleTime().range([0, width]);
-            var y = d3.scaleLinear().range([height, 0]);
+                var x = d3.scaleTime().range([0, width]);
+                var y = d3.scaleLinear().range([height, 0]);
 
-            var line = d3.line()
-                .x(function(d) { return x(d.year); })
-                .y(function(d) { return y(d.value); })
-                // .curve(d3.curveMonotoneX);
-                .curve(d3.curveBasis);
+                var line = d3.line()
+                    .x(function(d) { return x(d.year); })
+                    .y(function(d) { return y(d.value); })
+                    // .curve(d3.curveMonotoneX);
+                    .curve(d3.curveBasis);
 
-            var g = svg.append("g")
-                .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+                var g = svg.append("g")
+                    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-            d3.json(`../../api/list.php?foursquare_list_id=${window.location.hash.replace('#', '')}`, function(error, dataInput) {
-                if (error) throw error;
+                d3.json(`../../api/list.php?foursquare_list_id=${foursquare_list_id}`, function(error, dataInput) {
+                    if (error) throw error;
 
-                window.document.title = `${dataInput.metadata.name} – ${window.document.title}`;
-                document.querySelector("h1").innerText = dataInput.metadata.name;
+                    window.document.title = `${dataInput.metadata.name} – ${window.document.title}`;
+                    document.querySelector("h1").innerText = dataInput.metadata.name;
 
-                let data = dataInput.places.metadata.saved_timestamp_counts_with_zeros.map((saved_timestamps_count) => {
-                    return {
-                    'year': parseTime(saved_timestamps_count.date),
-                    'test': saved_timestamps_count.date,
-                    'value': saved_timestamps_count.count
-                    }
-                });
+                    let data = dataInput.places.metadata.saved_timestamp_counts_with_zeros.map((saved_timestamps_count) => {
+                        return {
+                        'year': parseTime(saved_timestamps_count.date),
+                        'test': saved_timestamps_count.date,
+                        'value': saved_timestamps_count.count
+                        }
+                    });
 
-                x.domain(d3.extent(data, function(d) {
-                    return d.year;
-                }));
+                    x.domain(d3.extent(data, function(d) {
+                        return d.year;
+                    }));
 
-                y.domain(
-                    [d3.min(data, function(d) {
-                        return d.value;
-                    }) / 1.005,
-                    d3.max(data, function(d) {
-                        return d.value;
-                    }) * 1.005]
-                );
+                    y.domain(
+                        [d3.min(data, function(d) {
+                            return d.value;
+                        }) / 1.005,
+                        d3.max(data, function(d) {
+                            return d.value;
+                        }) * 1.005]
+                    );
 
-                g.append("g")
-                    .attr("class", "axis axis--x")
-                    .attr("transform", "translate(0, " + (height + 30) + ")")
-                    .call(d3.axisBottom(x).ticks(6))
+                    g.append("g")
+                        .attr("class", "axis axis--x")
+                        .attr("transform", "translate(0, " + (height + 30) + ")")
+                        .call(d3.axisBottom(x).ticks(6))
 
-                g.append("g")
-                    .attr("class", "axis axis--y")
-                    .attr("transform", "translate(-30, 0)")
-                    .call(d3.axisLeft(y).ticks(6))
+                    g.append("g")
+                        .attr("class", "axis axis--y")
+                        .attr("transform", "translate(-30, 0)")
+                        .call(d3.axisLeft(y).ticks(6))
 
-                g.append("path")
-                    .datum(data)
-                    .attr("class", "line")
-                    .attr("stroke", pathColors[Math.floor(Math.random() * pathColors.length)])
-                    .attr("d", line);
-
-                // var focus = g.append("g")
-                //     .attr("class", "focus")
-                //     .style("display", "none");
-
-                // focus.append("line")
-                //     .attr("class", "x-hover-line hover-line")
-                //     .attr("y1", 0)
-                //     .attr("y2", height);
-
-                // focus.append("line")
-                //     .attr("class", "y-hover-line hover-line")
-                //     .attr("x1", width)
-                //     .attr("x2", width);
-
-                // focus.append("circle")
-                //     .attr("r", 6);
-
-                // focus.append("text")
-                //     .attr("x", 20)
-                //   	.attr("y", -10)
-                //     .attr("width", 100)
-                //     .attr("height", 100)
-                //     .attr("class", "tooltip");
-
-                // svg.append("rect")
-                //     .attr("transform", "translate(" + margin.left + "," + margin.top + ")")
-                //     .attr("class", "overlay")
-                //     .attr("width", width)
-                //     .attr("height", height)
-                //     .on("mouseover", function() { focus.style("display", null); })
-                //     .on("mouseout", function() { focus.style("display", "none"); })
-                //     .on("mousemove", mousemove);
-
-                // function mousemove() {
-                //     var x0 = x.invert(d3.mouse(this)[0]),
-                //         i = bisectDate(data, x0, 1),
-                //         d0 = data[i - 1],
-                //         d1 = data[i],
-                //         d = x0 - d0.year > d1.year - x0 ? d1 : d0;
-
-                //     focus.attr("transform", "translate(" + x(d.year) + "," + y(d.value) + ")");
-
-                //     focus.select("text").text(function() {
-                //         return `${d.test} ${d.value}`;
-                //     });
-
-                //     focus.select(".x-hover-line").attr("y2", height - y(d.value));
-
-                //     focus.select(".y-hover-line").attr("x2", width + width);
-                // }
-            });
+                    g.append("path")
+                        .datum(data)
+                        .attr("class", "line")
+                        .attr("stroke", pathColors[Math.floor(Math.random() * pathColors.length)])
+                        .attr("d", line);
+                });   
+            }
         </script>
 	</body>
 </html>
