--- a/v2/frontend/experiments/index.html
+++ b/v2/frontend/experiments/index.html
@@ -108,7 +108,7 @@
         </style>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
 	</head>
-	<body>
+	<body ontouchstart="">
         <ul id="lists"></ul>
         <script type="text/javascript">
             function renderDataAddedGraph(svg_id, foursquare_list_id) {
