--- a/v2/frontend/experiments/index.html
+++ b/v2/frontend/experiments/index.html
@@ -4,102 +4,9 @@
         <meta charset="utf-8">
 		<title>Experiments Index</title>
         <script src="https://d3js.org/d3.v4.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style type="text/less">
-            @import "experiments-style.less";
-
-            ul {
-                margin-top: 50px;
-                list-style: none;
-                padding-left: 0;
-                width: 100%;
-
-                li {
-                    width: 100%;
-                    margin: 0 0 80px 0;
-
-                    .links {
-                        display: block;
-                        margin-top: 20px;
-                        font-size: 0;
-
-                        a {
-                            @media @mobile {    
-                                display: block;
-                                margin-right: 0px;
-                            }
-
-                            transition: all 0.1s;
-                            display: inline-block;
-                            background: rgba(0, 0, 0, 0.05);
-                            padding: 8px 12px;
-                            border-radius: 8px;
-                            margin-bottom: 12px;
-                            margin-right: 12px;
-
-                            &:hover {
-                                background: rgba(0, 0, 0, 0.1);
-
-                                .emoji {
-                                    cursor: pointer;
-                                }
-
-                                label {
-                                    cursor: pointer;
-                                    /* text-decoration: underline; */
-                                    color: rgba(0, 0, 0, 0.6);
-                                }
-                            }
-
-                            .emoji {
-                                display: inline-block;
-                                font-size: 20px;
-                                vertical-align: -2px;
-                                margin-right: 8px;
-                                color: rgba(0, 0, 0, 1);
-                            }
-
-                            label {
-                                display: inline-block;
-                                color: rgba(0, 0, 0, 0.5);
-                                font: 16px 'Helvetica Neue';
-                                text-decoration: none;
-                                margin-right: 4px;
-                            }
-                        }
-                    }
-
-                    .date-graph {
-                        margin-bottom: 20px;
-
-                        .axis path,
-                        .axis line {
-                            fill: none;
-                            stroke: rgba(0, 0, 0, 0.2);
-                            stroke-width: 0px;
-                            shape-rendering: crispEdges;
-                        }
-
-                        .axis text {
-                            font: 16px 'Helvetica Neue';
-                            fill: rgba(0, 0, 0, 0.5);
-                        }
-
-                        .line {
-                            fill: none;
-                            stroke-width: 4px;
-                            stroke-linecap: round;
-                        }
-
-                        .overlay {
-                            fill: none;
-                            pointer-events: all;
-                        }
-                    }
-                }
-            }
-        </style>
+		<link rel="stylesheet/less" href="index.less">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body ontouchstart="">
         <ul id="lists"></ul>
