--- a/v2/frontend/experiments/category-stats.html
+++ b/v2/frontend/experiments/category-stats.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-        <meta charset="utf-8">
+        <meta charset='utf-8'>
 		<title>Category Stats</title>
-		<link rel="stylesheet/less" href="experiments-style.less">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js" ></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel='stylesheet/less' href='experiments-style.less'>
+		<script src='//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.1/less.min.js' ></script>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <style>
             ul {
                 margin-top: 50px;
@@ -73,12 +73,14 @@
         </style>
 	</head>
 	<body>
-        <h1></h1>
-        <h2>Top categories of places saved</h2>
-        <ul id="category_stats"></ul>
-        <div id="credit">Category names and icons from <a href="https://developer.foursquare.com/docs/api-reference/venues/categories/">Foursquare Places API</a>.</div>
-        <pre id="debug"></pre>
-        <script type="text/javascript">
+        <div id='description'>
+            <h1></h1>
+            <h2>Top categories of places saved</h2>
+        </div>
+        <ul id='category_stats'></ul>
+        <div id='credit'>Category names and icons from <a href='https://developer.foursquare.com/docs/api-reference/venues/categories/'>Foursquare Places API</a>.</div>
+        <pre id='debug'></pre>
+        <script type='text/javascript'>
             async function getListData() {
                 try {
                     const data = await fetch(`../../api/list.php?foursquare_list_id=${window.location.hash.replace('#', '')}`);
@@ -89,11 +91,12 @@
                 }
             }
 
-            async function render() {
+            async function renderPage() {
                 const   listData = await getListData(),
-                        category_stats = document.querySelector("#category_stats"),
-                        title = document.querySelector("h1"),
-                        credit = document.querySelector("#credit");
+                        category_stats = document.querySelector('#category_stats'),
+                        description = document.getElementById('description'),
+                        title = document.querySelector('h1'),
+                        credit = document.querySelector('#credit');
 
                 window.document.title = `${listData.metadata.name} – ${window.document.title}`;
                 title.innerText = listData.metadata.name;
@@ -102,8 +105,8 @@
 
                 listData.places.metadata.top_categories.map((category, index) => {
                     if(index < 10 && category.percentage_in_this_list > 1.8) {
-                        category_stat_list_items += `<a class="category" target="_blank" rel="noopener" href="https://places.leo.gd/${listData.metadata.url}/${category.url}"><li><div class="image-cell"><div class="image-wrapper"><img src="${category.data.icon_url_prefix}64${category.data.icon_url_suffix}"></div></div><label>${category.data.plural_name}</label><span class="count">${(category.percentage_in_this_list).toFixed(1)}%</span></li></a>`;
-                        // category_stat_list_items += `<li><div class="image-cell"><div class="image-wrapper"><img src="${category.data.icon_url_prefix}64${category.data.icon_url_suffix}"></div></div><label>${category.data.plural_name}</label><span class="count">${(category.percentage_in_this_list).toFixed(1)}%</span></li>`;
+                        category_stat_list_items += `<a class='category' target='_blank' rel='noopener' href='https://places.leo.gd/${listData.metadata.url}/${category.url}'><li><div class='image-cell'><div class='image-wrapper'><img src='${category.data.icon_url_prefix}64${category.data.icon_url_suffix}'></div></div><label>${category.data.plural_name}</label><span class='count'>${(category.percentage_in_this_list).toFixed(1)}%</span></li></a>`;
+                        // category_stat_list_items += `<li><div class='image-cell'><div class='image-wrapper'><img src='${category.data.icon_url_prefix}64${category.data.icon_url_suffix}'></div></div><label>${category.data.plural_name}</label><span class='count'>${(category.percentage_in_this_list).toFixed(1)}%</span></li>`;
                     }
                 });
 
@@ -111,10 +114,12 @@
                 
                 credit.style.display = 'block';
 
+                description.style.display = 'block';
+                
                 // document.getElementById('debug').innerHTML = JSON.stringify(listData, null, 2);
             }
 
-            render();
+            renderPage();
         </script>
 	</body>
 </html>
