--- a/v2/frontend/experiments/index.html
+++ b/v2/frontend/experiments/index.html
@@ -111,7 +111,7 @@
                     listItemHtml += `
                         <li>
                             <h1>${list.name}</h1>
-                            <svg width="320" height="160" class="date-graph" id="foursquare_id_${list.foursquare_id}"></svg>
+                            <svg width="320" height="160" class="date_graph" id="foursquare_id_${list.foursquare_id}"></svg>
                             <div class="links">
                                 <a href="date-added-graph.html#${list.foursquare_id}" target="_blank" rel="noopener"><span class="emoji">📈</span><label>Date Added Graph</label></a>
                                 <a href="category-stats.html#${list.foursquare_id}" target="_blank" rel="noopener"><span class="emoji">#️⃣</span><label>Category Stats</label></a>
