Adding credit for base of date-added-graph

--- a/v2/frontend/experiments/date-added-graph.html
+++ b/v2/frontend/experiments/date-added-graph.html
@@ -63,6 +63,8 @@
                     '#FF2DAB'
                 ];
 
+                // Based on https://www.d3-graph-gallery.com/graph/line_basic.html
+
                 var svg = d3.select(`svg#${svg_id}`),
                     margin = {top: 10, right: 60, bottom: 60, left: 70},
                     width = +svg.attr('width') - margin.left - margin.right,
